--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,65 @@
 <resources>
     <string name="app_name">Crossdle</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_colon">:</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Game -->
+
+    <string name="game_heading_daily">Daily</string>
+    <string name="game_heading_random">Random</string>
+
+    <!-- Gamebar -->
+
+    <string name="gamebar_heading_title">@string/app_name</string>
+    <string name="gamebar_help_settings">Settings Icon</string>
+    <string name="gamebar_help_info">Info Icon</string>
+
+    <!-- History -->
+
+    <string name="history_heading_games">Games</string>
+    <string name="history_heading_streak">Streak</string>
+    <string name="history_heading_wins">Win %</string>
+
+    <!-- History Item -->
+
+    <string name="history_item_field_title">@string/app_name</string>
+    <string name="history_item_field_time">Time</string>
+    <string name="history_item_field_correct">Correct Words</string>
+    <string name="history_item_field_attempts">Attempts</string>
+
+    <!-- Keyboard -->
+
+    <string name="keyboard_button_q">Q</string>
+    <string name="keyboard_button_w">W</string>
+    <string name="keyboard_button_e">E</string>
+    <string name="keyboard_button_r">R</string>
+    <string name="keyboard_button_t">T</string>
+    <string name="keyboard_button_y">Y</string>
+    <string name="keyboard_button_u">U</string>
+    <string name="keyboard_button_i">I</string>
+    <string name="keyboard_button_o">O</string>
+    <string name="keyboard_button_p">P</string>
+
+    <string name="keyboard_button_a">A</string>
+    <string name="keyboard_button_s">S</string>
+    <string name="keyboard_button_d">D</string>
+    <string name="keyboard_button_f">F</string>
+    <string name="keyboard_button_g">G</string>
+    <string name="keyboard_button_h">H</string>
+    <string name="keyboard_button_j">J</string>
+    <string name="keyboard_button_k">K</string>
+    <string name="keyboard_button_l">L</string>
+
+    <string name="keyboard_button_z">Z</string>
+    <string name="keyboard_button_x">X</string>
+    <string name="keyboard_button_c">C</string>
+    <string name="keyboard_button_v">V</string>
+    <string name="keyboard_button_b">B</string>
+    <string name="keyboard_button_n">N</string>
+    <string name="keyboard_button_m">M</string>
+
+    <string name="keyboard_button_enter">&gt;</string>
+    <string name="keyboard_button_back">&lt;</string>
+
 </resources>
