Game Flow Completed -Cells now store attempts and true values separate -Selections will not lock words into the board unless enter is pressed now -Game now ends when the entire board is correct -Finished game popup opens on game end -Changed keyboard back icon and enter text -Added game end animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,7 @@
     <string name="keyboard_button_n">N</string>
     <string name="keyboard_button_m">M</string>
 
-    <string name="keyboard_button_enter">&gt;</string>
-    <string name="keyboard_button_back">&lt;</string>
+    <string name="keyboard_button_enter">ENTER</string>
 
     <!-- Menu -->
 
