--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,11 @@
     <string name="history">History</string>
     <string name="settings">Settings</string>
 
+    <!-- Setting -->
+
+    <string name="volume">Volume</string>
+    <string name="confirm">Confirm</string>
+    <string name="themes">Themes</string>
+    <string name="title">Settings</string>
+
 </resources>
