--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,13 @@
     <string name="themes">Themes</string>
     <string name="title">Settings</string>
 
+    <!-- Help -->
+
+    <string name="help_crossdle">Fill in each row/column with words that have the same length as
+        said row/column. Afterwards press Enter to see if you have guess the correct word. Letters
+        that are in the word and are in the correct spot will turn green, letters that are in
+        the word but in a different spot will be yellow, and letters not in the word will be gray.
+    </string>
+    <string name="help_title">How To Play:</string>
+
 </resources>
