Added daily board. -Checks if 24 hours has passed since last daily board was added and adds a new one if true.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="game_heading_random">Random</string>
     <string name="game_attempts">Remaining attempts:</string>
     <string name="game_remaining">20</string>
+    <string name="game_random_title">Random</string>
 
     <!-- Gamebar -->
 
